{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 53,
  "lineage": "08be0538-a278-8f32-e3ff-2fd466efbd85",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:security-group/sg-0bc4e4f338afbdfb4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bc4e4f338afbdfb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2022021813172040390000000b",
            "name_prefix": "all_worker_management",
            "owner_id": "287439122014",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:security-group/sg-0e95b57d660c5aa38",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e95b57d660c5aa38",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2022021813172040700000000c",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "287439122014",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:security-group/sg-0d65b0970905ba1ea",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d65b0970905ba1ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two2022021813172040030000000a",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "287439122014",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:security-group/sg-001210dd814e4f3ad",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-001210dd814e4f3ad",
            "ingress": [],
            "name": "terraform-eks-zjJ4LpE020220218131720393400000009",
            "name_prefix": "terraform-eks-zjJ4LpE0",
            "owner_id": "287439122014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-zjJ4LpE0-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "terraform-eks-zjJ4LpE0-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:security-group/sg-03ecff44d0d1d1ffb",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-03ecff44d0d1d1ffb",
            "ingress": [],
            "name": "terraform-eks-zjJ4LpE02022021813172153670000000d",
            "name_prefix": "terraform-eks-zjJ4LpE0",
            "owner_id": "287439122014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-zjJ4LpE0-eks_worker_sg",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "owned"
            },
            "tags_all": {
              "Name": "terraform-eks-zjJ4LpE0-eks_worker_sg",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2923676281",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-001210dd814e4f3ad",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3075389073",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-001210dd814e4f3ad",
            "self": false,
            "source_security_group_id": "sg-03ecff44d0d1d1ffb",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3740168527",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03ecff44d0d1d1ffb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-170850998",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ecff44d0d1d1ffb",
            "self": false,
            "source_security_group_id": "sg-001210dd814e4f3ad",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3781410603",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ecff44d0d1d1ffb",
            "self": false,
            "source_security_group_id": "sg-001210dd814e4f3ad",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2552772433",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03ecff44d0d1d1ffb",
            "self": false,
            "source_security_group_id": "sg-03ecff44d0d1d1ffb",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b0a4e37730977ac",
            "domain": "vpc",
            "id": "eipalloc-02b0a4e37730977ac",
            "network_border_group": "cn-north-1",
            "public_dns": "ec2-71-132-47-174.cn-north-1.compute.amazonaws.com.cn",
            "public_ip": "71.132.47.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-eks-vpc-cn-north-1a",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-vpc-cn-north-1a",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:internet-gateway/igw-0b2b9e8f360f9216a",
            "id": "igw-0b2b9e8f360f9216a",
            "owner_id": "287439122014",
            "tags": {
              "Name": "terraform-eks-vpc",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-vpc",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            },
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b0a4e37730977ac",
            "connectivity_type": "public",
            "id": "nat-0c08e0dda2131604e",
            "network_interface_id": "eni-0bf25a83a09e50ff8",
            "private_ip": "10.0.4.33",
            "public_ip": "71.132.47.174",
            "subnet_id": "subnet-09f195ca624f899bd",
            "tags": {
              "Name": "terraform-eks-vpc-cn-north-1a",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-vpc-cn-north-1a",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dbf1bf9fca65c7e21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c08e0dda2131604e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dbf1bf9fca65c7e2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2b9e8f360f9216a",
            "id": "r-rtb-0c8bf2d74a2d527ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c8bf2d74a2d527ef",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:route-table/rtb-0dbf1bf9fca65c7e2",
            "id": "rtb-0dbf1bf9fca65c7e2",
            "owner_id": "287439122014",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-eks-vpc-private",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-vpc-private",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:route-table/rtb-0c8bf2d74a2d527ef",
            "id": "rtb-0c8bf2d74a2d527ef",
            "owner_id": "287439122014",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-eks-vpc-public",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-vpc-public",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4568bd8d2ef7974",
            "route_table_id": "rtb-0dbf1bf9fca65c7e2",
            "subnet_id": "subnet-01eb9cf399d1264e4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00177f146ad2865aa",
            "route_table_id": "rtb-0dbf1bf9fca65c7e2",
            "subnet_id": "subnet-04ec5cb003e9c2008"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a46be0311c7ea05c",
            "route_table_id": "rtb-0c8bf2d74a2d527ef",
            "subnet_id": "subnet-09f195ca624f899bd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b10e35a378dcab",
            "route_table_id": "rtb-0c8bf2d74a2d527ef",
            "subnet_id": "subnet-0cce205a8e5009a7f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:subnet/subnet-01eb9cf399d1264e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-north-1a",
            "availability_zone_id": "cnn1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eb9cf399d1264e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287439122014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-vpc-private-cn-north-1a",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "terraform-eks-vpc-private-cn-north-1a",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:subnet/subnet-04ec5cb003e9c2008",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-north-1b",
            "availability_zone_id": "cnn1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ec5cb003e9c2008",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287439122014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-vpc-private-cn-north-1b",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "terraform-eks-vpc-private-cn-north-1b",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:subnet/subnet-09f195ca624f899bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-north-1a",
            "availability_zone_id": "cnn1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f195ca624f899bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287439122014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-vpc-public-cn-north-1a",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terraform-eks-vpc-public-cn-north-1a",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:subnet/subnet-0cce205a8e5009a7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-north-1b",
            "availability_zone_id": "cnn1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cce205a8e5009a7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287439122014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-vpc-public-cn-north-1b",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terraform-eks-vpc-public-cn-north-1b",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0095bfbc92bd3e5a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-north-1:287439122014:vpc/vpc-0095bfbc92bd3e5a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036d7dd73c87ffd91",
            "default_route_table_id": "rtb-0da09a3a73fccfb1a",
            "default_security_group_id": "sg-0cfb5fc4b863e522a",
            "dhcp_options_id": "dopt-b84846dd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0095bfbc92bd3e5a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da09a3a73fccfb1a",
            "owner_id": "287439122014",
            "tags": {
              "Name": "terraform-eks-vpc",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-vpc",
              "kubernetes.io/cluster/terraform-eks-zjJ4LpE0": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}